# Statue

./: Cargo.toml  README.md
examples/: basic_parsing.rs  simple_example.rs
src/: arch.rs  error.rs  execution.rs  header.rs  lib.rs  loader.rs  memory.rs  program.rs  relocation.rs  section.rs  symbol.rs
tests/: integration_tests.rs  test_elf_loading.rs
